--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -3,7 +3,14 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
+        title #{nameSite} | #{pagina}
+        link(rel='preconnect' href='https://fonts.googleapis.com')
+        link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+        link(href='https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Raleway:wght@400;700;900&family=Roboto:wght@300;400;500;700&family=Staatliches&display=swap' rel='stylesheet')
+
+        link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/css/style.css")
     body
-        h1 Agencia de Viajes
+        include header
         block contenido 
+        include footer
