--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -1,5 +1,25 @@
 extends ./layout/index
 block contenido
     main.container.mt-5 
+        h2(class='text-center mt-5') #{pagina}
+        blockquote.text-center Lee sobre nuestros clientes y sus experiencias
+        include ./layout/bloque_testimoniales
         .row 
-            h2= pagina
+            .col-md-12 
+                h2.d-block.w-100.text-center Agregar un testimonial
+                if (errores)
+                    each error in errores 
+                        .alert.col.alert-danger.text-center #{error}
+            .row.justify-content-center.col
+                .col-md-8 
+                    form(action='/testimoniales' method='POST')
+                        .form-group
+                            label(for='nombre') Nombre:
+                            input(id='nombre', type='text', placeholder='Ingresa tu nombre',name='nombre',class='form-control',value= nombre)                        
+                        .form-group
+                            label(for='correo') Correo:
+                            input(id='correo', type='email', placeholder='Ingresa tu correo',name='correo',class='form-control', value=correo)
+                        .form-group 
+                            label(form='mensaje') Mensaje:
+                            textarea#mensaje(name="mensaje", placeholder='Ingresa tu mensaje', rows=3, class='form-control') #{mensaje} 
+                        input.btn.btn-success.btn-block(type="submit")
